Add Leetcode 66 Plus One

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "python.testing.cwd": "${workspaceFolder}/analyser",
+  "python.testing.cwd": "${workspaceFolder}/challenges",
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true,
   "python.testing.autoTestDiscoverOnSaveEnabled": true,
