--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ python = "^3.12"
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.6.5"
 
+pytest = "^8.3.3"
 [tool.ruff]
 line-length = 120
 
@@ -30,6 +31,8 @@ ignore = [
   "PLR2004", # Ignore magic value
   "D104",    # Ignore missing docstring in public package
   "D100",    # Ignore missing docstring in public module
+  "T201",    # Ignore print statements
+  "N802",    # Ignore function name should be lowercase
 ]
 
 # Allow autofix for all enabled rules (when `--fix`) is provided.
@@ -59,7 +62,10 @@ exclude = [
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 [tool.ruff.lint.per-file-ignores]
-"**test_*.py" = ["S101", "D102", "D103", "SLF001", "PT019"]
+"test_*.py" = ["S101", "D102", "D103", "SLF001", "PT019"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google" # Use Google docstring convention.
+
+[tool.ruff.lint.isort]
+known-first-party = ["challenge"]
