Create Composite Setup Dependencies Action

--- a/.github/other-configurations/labels.yml
+++ b/.github/other-configurations/labels.yml
@@ -29,7 +29,23 @@
 - color: d876e3
   name: wontfix
   description: The issue is expected and will not be fixed
-# Custom
+# Languages
+- color: 2b67c6
+  name: python
+  description: Pull requests that update Python code
+- color: 000000
+  name: github_actions
+  description: Pull requests that update GitHub Actions code
+- color: 66A615
+  name: just
+  description: Pull requests that update Just code
+- color: 00ff44
+  name: shell
+  description: Pull requests that update Shell code
+# Components
 - color: 00f2de
   name: challenge
   description: Adding/updating a challenge
+- color: ff0073
+  name: git_hooks
+  description: Pull requests that update git hooks
