--- a/.github/other-configurations/labeler.yml
+++ b/.github/other-configurations/labeler.yml
@@ -12,3 +12,20 @@ challenge:
   - any:
       - changed-files:
           - any-glob-to-any-file: ["challenges/**/*"]
+just:
+  - any:
+      - changed-files:
+          - any-glob-to-any-file: ["Justfile", "**/*.just"]
+shell:
+  - any:
+      - changed-files:
+          - any-glob-to-any-file: ["**/*.sh"]
+github_actions:
+  - any:
+      - changed-files:
+          - any-glob-to-any-file:
+              [".github/workflows/*", ".github/workflows/**/*"]
+git_hooks:
+  - any:
+      - changed-files:
+          - any-glob-to-any-file: ["githooks/**"]
