--- a/.github/workflows/pull-request-labeller.yml
+++ b/.github/workflows/pull-request-labeller.yml
@@ -18,6 +18,7 @@ permissions:
 
 jobs:
   labeller:
+    name: "Pull Request Labeller"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/labeler@v5
