--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,3 +5,5 @@ sonar.sources=.
 
 sonar.python.version=3.12
 sonar.python.coverage.reportPaths=coverage.xml
+sonar.coverage.exclusions=**/tests/**
+sonar.test.exclusions=**/tests/**
