Fix SonarCloud Coverage (#51)
Updated the test coverage configuration in the Justfile. The coverage now includes the entire project root (`.`) instead of just the `challenges` directory. This change ensures that the test coverage report encompasses all relevant code in the project.

fixes #52

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,5 +5,5 @@ sonar.sources=.
 
 sonar.python.version=3.12
 sonar.python.coverage.reportPaths=coverage.xml
-sonar.coverage.exclusions=**/tests/**
-sonar.test.exclusions=**/tests/**
+sonar.coverage.exclusions=**/test_*.py
+sonar.test.exclusions=**/test_*.py
