--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = "^3.13"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "0.6.9"
@@ -20,6 +20,7 @@ pytest-cov = "5.0.0"
 
 [tool.ruff]
 line-length = 120
+target-version = "py313"
 
 [tool.ruff.lint]
 # Add the `line-too-long` rule to the enforced rule set.
