--- a/.github/workflows/pull-request-labeller.yml
+++ b/.github/workflows/pull-request-labeller.yml
@@ -18,11 +18,16 @@ permissions:
 
 jobs:
   labeller:
-    name: "Pull Request Labeller"
+    name: Label Pull Request
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/labeler@v5
+      - uses: actions/labeler@v5.0.0
         with:
           repo-token: "${{ secrets.GITHUB_TOKEN }}"
-          configuration-path: .github/other-configurations/labeler.yml
+          configuration-path: .github/other-configurations/labeller.yml
           sync-labels: true
+
+      - name: Add Size Labels
+        uses: pascalgn/size-label-action@v0.5.5
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
