--- a/.github/actions/setup-dependencies/action.yml
+++ b/.github/actions/setup-dependencies/action.yml
@@ -6,7 +6,7 @@ runs:
   steps:
     - name: Install Poetry
       shell: bash
-      run: pipx install poetry
+      run: pipx install poetry==1.8.3
 
     - name: Install Python 3.13 with Poetry Cache
       uses: actions/setup-python@v5
