--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,5 @@
 [tool.poetry]
 name = "python-practice"
-description = ""
-authors = ["Jack Plowman <62281988+JackPlowman@users.noreply.github.com>"]
-license = "MIT"
-readme = "README.md"
 package-mode = false
 
 [build-system]
@@ -15,6 +11,7 @@ python = "^3.13"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "0.6.9"
+poetry = "1.8.4"
 pytest = "8.3.3"
 pytest-cov = "5.0.0"
 
