--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -87,4 +87,4 @@ jobs:
         uses: extractions/setup-just@v2
 
       - name: Check Justfile Format
-        run: just format-check
+        run: just just-format-check
