--- a/.github/workflows/pull-request-tasks.yml
+++ b/.github/workflows/pull-request-tasks.yml
@@ -1,13 +1,8 @@
-name: "Pull Request Labeller"
+name: "Pull Request Tasks"
 
 on:
   pull_request:
-    types:
-      [
-        opened,
-        edited,
-        synchronize,
-      ]
+    types: [opened, edited, synchronize]
 
 permissions:
   pull-requests: write
