Update Repository Labels

--- a/.github/other-configurations/labels.yml
+++ b/.github/other-configurations/labels.yml
@@ -42,6 +42,9 @@
 - color: 00ff44
   name: shell
   description: Pull requests that update Shell code
+- color: 1900ff
+  name: markdown
+  description: Pull requests that update Markdown documentation
 # Components
 - color: 00f2de
   name: challenge
