--- a/.github/workflows/code-checks.yml
+++ b/.github/workflows/code-checks.yml
@@ -21,10 +21,10 @@ jobs:
         uses: actions/checkout@v4.2.2
         with:
           fetch-depth: 0
-
+          persist-credentials: false
       # Lint and Format everything but Python
       - name: Lint Code Base
-        uses: super-linter/super-linter/slim@v7.2.0
+        uses: super-linter/super-linter/slim@v7.2.1
         env:
           VALIDATE_ALL_CODEBASE: true
           DEFAULT_BRANCH: main
@@ -47,15 +47,13 @@ jobs:
         uses: actions/checkout@v4.2.2
         with:
           fetch-depth: 0
-
+          persist-credentials: false
       - name: Setup Dependencies
         uses: ./.github/actions/setup-dependencies
-
       - name: Check Python Code Quality (Ruff)
         run: just ruff-lint
         env:
           RUFF_OUTPUT_FORMAT: "github"
-
       - name: Check Python Code Format (Ruff)
         run: just ruff-format
         env:
@@ -69,19 +67,17 @@ jobs:
         uses: actions/checkout@v4.2.2
         with:
           fetch-depth: 0
-
+          persist-credentials: false
       - name: Setup Python Dependencies
         uses: ./.github/actions/setup-dependencies
-
       - name: Check Python Code Quality (Ruff)
         run: just ruff-lint
         env:
           RUFF_OUTPUT_FORMAT: "sarif"
           RUFF_OUTPUT_FILE: "ruff-results.sarif"
         continue-on-error: true
-
       - name: Upload analysis results to GitHub
-        uses: github/codeql-action/upload-sarif@v3.27.5
+        uses: github/codeql-action/upload-sarif@v3.28.0
         with:
           sarif_file: ruff-results.sarif
           wait-for-processing: true
@@ -94,18 +90,15 @@ jobs:
         uses: actions/checkout@v4.2.2
         with:
           fetch-depth: 0
-
+          persist-credentials: false
       - name: Setup Dependencies
         uses: ./.github/actions/setup-dependencies
-
       - name: Run Unit Tests
         run: just test
-
       - name: Override Coverage Source Path for SonarCloud
         run: sed -i "s/<source>\/home\/runner\/work\/python-practice\/python-practice<\/source>/<source>\/github\/workspace<\/source>/g" /home/runner/work/python-practice/python-practice/coverage.xml
-
       - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@v3.1.0
+        uses: SonarSource/sonarqube-scan-action@v4.2.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -118,7 +111,7 @@ jobs:
         uses: actions/checkout@v4.2.2
         with:
           fetch-depth: 0
-
+          persist-credentials: false
       - name: Check Markdown links
         uses: UmbrellaDocs/action-linkspector@v1.2.4
         with:
@@ -136,10 +129,9 @@ jobs:
         uses: actions/checkout@v4.2.2
         with:
           fetch-depth: 0
-
+          persist-credentials: false
       - name: Set up Just
         uses: extractions/setup-just@v2
-
       - name: Check Justfile Format
         run: just just-format-check
 
@@ -149,12 +141,13 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.2.2
-
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3.27.5
         with:
-          languages: javascript
+          fetch-depth: 0
+          persist-credentials: false
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3.28.0
+        with:
+          languages: python
           queries: security-and-quality
-
       - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3.27.5
+        uses: github/codeql-action/analyze@v3.28.0
