--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,9 +19,11 @@ requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
+line-length = 120
 target-version = "py313"
 
 [tool.ruff.lint]
+extend-select = ["E501"]
 select = ["ALL"]
 
 ignore = [
@@ -35,6 +37,24 @@ ignore = [
 
 fixable = ["ALL"]
 unfixable = []
+
+exclude = [
+  ".bzr",
+  ".direnv",
+  ".eggs",
+  ".git",
+  ".hg",
+  ".mypy_cache",
+  ".nox",
+  ".pants.d",
+  ".pytype",
+  ".ruff_cache",
+  ".svn",
+  ".tox",
+  ".venv",
+  "__pypackages__",
+  "_build",
+]
 
 dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
