--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,8 @@ ignore = [
   "PLR2004", # Ignore magic value
   "D104",    # Ignore missing docstring in public package
   "D100",    # Ignore missing docstring in public module
-  "SIM112",  # Ignore Lowercase environment variables (used for GitHub actions)
+  "T201",    # Ignore print statements
+  "N802",    # Ignore function name should be lowercase
 ]
 
 fixable = ["ALL"]
