--- a/.github/workflows/code-checks.yml
+++ b/.github/workflows/code-checks.yml
@@ -39,9 +39,11 @@ jobs:
           VALIDATE_PYTHON_RUFF: false
           VALIDATE_PYTHON_PYINK: false
 
-  check-python-code-format-and-quality:
-    name: Check Python Code Format and Quality
+  run-python-code-checks:
+    name: Run Python Code Checks
     runs-on: ubuntu-latest
+    permissions:
+      security-events: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4.2.2
@@ -49,26 +51,6 @@ jobs:
           fetch-depth: 0
           persist-credentials: false
       - name: Setup Dependencies
-        uses: ./.github/actions/setup-dependencies
-      - name: Check Python Code Quality (Ruff)
-        run: just ruff-lint
-        env:
-          RUFF_OUTPUT_FORMAT: "github"
-      - name: Check Python Code Format (Ruff)
-        run: just ruff-format
-        env:
-          RUFF_OUTPUT_FORMAT: "github"
-
-  upload-python-scanner-results:
-    name: Upload Python Ruff Scanner Results
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4.2.2
-        with:
-          fetch-depth: 0
-          persist-credentials: false
-      - name: Setup Python Dependencies
         uses: ./.github/actions/setup-dependencies
       - name: Check Python Code Quality (Ruff)
         run: just ruff-lint
@@ -81,6 +63,14 @@ jobs:
         with:
           sarif_file: ruff-results.sarif
           wait-for-processing: true
+      - name: Check Python Code Quality (Ruff)
+        run: just ruff-lint
+        env:
+          RUFF_OUTPUT_FORMAT: "github"
+      - name: Check Python Code Format (Ruff)
+        run: just ruff-format
+        env:
+          RUFF_OUTPUT_FORMAT: "github"
 
   unit-test:
     name: Run Unit Tests
