--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,16 @@
 [project]
 name = "python-practice"
-version = "1.0.0"
+dynamic = ["version"]
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+  "ruff==0.9.1",
+  "pytest==8.3.4",
+  "pytest-cov==6.0.0",
+  "zizmor==1.1.0",
+]
 
 [tool.poetry]
-name = "python-practice"
 package-mode = false
-
-[tool.poetry.group.dev.dependencies]
-ruff = "0.8.6"
-pytest = "8.3.4"
-pytest-cov = "6.0.0"
-zizmor = "1.0.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
