--- a/.github/workflows/code-checks.yml
+++ b/.github/workflows/code-checks.yml
@@ -129,9 +129,13 @@ jobs:
     name: CodeQL Analysis
     runs-on: ubuntu-latest
     permissions:
+      statuses: write
       security-events: write
+    strategy:
+      matrix:
+        language: [python, typescript, actions]
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4.2.2
         with:
           fetch-depth: 0
@@ -139,7 +143,7 @@ jobs:
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3.28.1
         with:
-          languages: python
+          languages: ${{ matrix.language }}
           queries: security-and-quality
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3.28.1
