--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,7 +14,7 @@
   "explorer.fileNesting.enabled": true,
   "explorer.fileNesting.expand": false,
   "explorer.fileNesting.patterns": {
-    "pyproject.toml": "__init__.py, poetry.lock, coverage.xml, .coverage, .gitignore",
+    "pyproject.toml": "__init__.py, uv.lock, coverage.xml, .coverage, .gitignore",
     "challenge.py": "__init__.py, test_challenge.py, README.md"
   }
 }
