--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,18 +3,18 @@ name = "python-practise"
 dynamic = ["version"]
 requires-python = ">=3.13"
 dependencies = [
-  "ruff==0.9.4",
+  "ruff==0.9.7",
   "pytest==8.3.4",
   "pytest-cov==6.0.0",
-  "zizmor==1.3.0",
+  "zizmor==1.3.1",
 ]
 
-[tool.poetry]
-package-mode = false
+[tool.uv]
+required-version = "0.6.2"
+package = false
 
-[build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
+[tool.setuptools]
+py-modules = ["challenges"]
 
 [tool.ruff]
 target-version = "py313"
