Migrate Poetry to UV (#150)
# Pull Request

## Description

This pull request includes several changes to migrate from using Poetry
to UV for dependency management and updates to the CodeQL action
versions.

Migration from Poetry to UV:

*
[`.github/actions/setup-dependencies/action.yml`](diffhunk://#diff-41744aaf34820b46fe17d53d97ac7b6e435996a46c06a1781154ead9701846daL7-R14):
Replaced Poetry installation and setup steps with UV setup steps.
*
[`Justfile`](diffhunk://#diff-2f90408c2b0302b1cdb7f5d634114750837f940fa82d13057d9c18d0170a7e5cL7-R11):
Replaced Poetry commands with UV commands for installing dependencies,
running tests, and checking/fixing Ruff issues.
[[1]](diffhunk://#diff-2f90408c2b0302b1cdb7f5d634114750837f940fa82d13057d9c18d0170a7e5cL7-R11)
[[2]](diffhunk://#diff-2f90408c2b0302b1cdb7f5d634114750837f940fa82d13057d9c18d0170a7e5cL48-R56)
*
[`.vscode/settings.json`](diffhunk://#diff-a5de3e5871ffcc383a2294845bd3df25d3eeff6c29ad46e3a396577c413bf357L17-R17):
Updated file nesting patterns to replace `poetry.lock` with `uv.lock`.
*
[`pyproject.toml`](diffhunk://#diff-50c86b7ed8ac2cf95bd48334961bf0530cdc77b5a56f852c5c61b89d735fd711L6-R17):
Removed Poetry configuration and added UV configuration.

CodeQL action updates:

*
[`.github/workflows/code-checks.yml`](diffhunk://#diff-ddf88e15b08104435ae66be9982938335f6c290a85de4cb9a09868e0e01dd4d4L64-R64):
Updated CodeQL action versions from `v3.28.8` to `v3.28.10` for
`upload-sarif`, `init`, and `analyze` steps.
[[1]](diffhunk://#diff-ddf88e15b08104435ae66be9982938335f6c290a85de4cb9a09868e0e01dd4d4L64-R64)
[[2]](diffhunk://#diff-ddf88e15b08104435ae66be9982938335f6c290a85de4cb9a09868e0e01dd4d4L146-R152)
[[3]](diffhunk://#diff-ddf88e15b08104435ae66be9982938335f6c290a85de4cb9a09868e0e01dd4d4L168-R172)

Other updates:

*
[`.github/other-configurations/labeller.yml`](diffhunk://#diff-b490f987d9b055ce6e06e37d13763d61f6e0d5ee349b390bbb910f8d88ff36b9L19-R19):
Updated dependency file pattern from `poetry.lock` to `uv.lock`.
*
[

--- a/.github/workflows/code-checks.yml
+++ b/.github/workflows/code-checks.yml
@@ -61,12 +61,10 @@ jobs:
           RUFF_OUTPUT_FILE: "ruff-results.sarif"
         continue-on-error: true
       - name: Upload analysis results to GitHub
-        uses: github/codeql-action/upload-sarif@v3.28.8
+        uses: github/codeql-action/upload-sarif@v3.28.10
         with:
           sarif_file: ruff-results.sarif
           wait-for-processing: true
-      - name: Validates Pyproject
-        run: just pyproject-check
       - name: Check Python Code Quality (Ruff)
         run: just ruff-lint
         env:
@@ -143,13 +141,13 @@ jobs:
           fetch-depth: 0
           persist-credentials: false
       - name: Initialize CodeQL
-        uses: github/codeql-action/init@v3.28.8
+        uses: github/codeql-action/init@v3.28.10
         with:
           languages: ${{ matrix.language }}
           queries: security-and-quality
           config-file: .github/other-configurations/codeql-config.yml
       - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3.28.8
+        uses: github/codeql-action/analyze@v3.28.10
 
   run-zizmor:
     name: Check GitHub Actions with zizmor
@@ -165,11 +163,11 @@ jobs:
       - name: Setup Dependencies
         uses: ./.github/actions/setup-dependencies
       - name: Run zizmor 🌈
-        run: poetry run zizmor --format sarif . > results.sarif
+        run: uv run zizmor --format sarif . > results.sarif
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Upload SARIF file
-        uses: github/codeql-action/upload-sarif@v3.28.8
+        uses: github/codeql-action/upload-sarif@v3.28.10
         with:
           sarif_file: results.sarif
           category: zizmor
