--- a/.github/workflows/code-checks.yml
+++ b/.github/workflows/code-checks.yml
@@ -125,7 +125,23 @@ jobs:
       - name: Set up Just
         uses: extractions/setup-just@v3
       - name: Check Justfile Format
-        run: just just-format-check
+        run: just format-check
+
+  lefthook-validate:
+    name: Lefthook Validate
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4.2.2
+        with:
+          fetch-depth: 0
+          persist-credentials: false
+      - name: Install the latest version of uv
+        uses: astral-sh/setup-uv@v5.4.0
+        with:
+          version: "latest"
+      - name: Run Lefthook Validate
+        run: uvx lefthook validate
 
   run-codeql-analysis:
     name: CodeQL Analysis
