--- a/lefthook.yml
+++ b/lefthook.yml
@@ -20,3 +20,5 @@ pre-commit:
       run: just zizmor-check
     Python Checks:
       run: just ruff-checks
+    Pinact Checks:
+      run: just pinact-check
