--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "python-practise"
 dynamic = ["version"]
-requires-python = "~=3.13"
+requires-python = "~=3.13.0"
 dependencies = [
   "ruff==0.12.0",
   "pytest==8.4.0",
@@ -10,7 +10,7 @@ dependencies = [
 ]
 
 [tool.uv]
-required-version = "0.7.13"
+required-version = "~=0.8.0"
 package = false
 
 [tool.setuptools]
