--- a/lefthook.yml
+++ b/lefthook.yml
@@ -18,7 +18,9 @@ pre-commit:
       run: just lefthook-validate
     Zizmor Checks:
       run: just zizmor-check
-    Python Checks:
-      run: just ruff-checks
     Pinact Checks:
       run: just pinact-check
+    Actionlint Checks:
+      run: just actionlint-check
+    EditorConfig Check:
+      run: just editorconfig-check
