--- a/.github/workflows/code-checks.yml
+++ b/.github/workflows/code-checks.yml
@@ -29,6 +29,7 @@ jobs:
   codeql-checks:
     name: CodeQL Analysis
     permissions:
+      contents: read
       security-events: write # Allow the workflow to upload analysis results
     strategy:
       matrix:
